--- a/other/udemy/js_building_20_project/my_project/07_vowels_counting/style.css
+++ b/other/udemy/js_building_20_project/my_project/07_vowels_counting/style.css
@@ -12,3 +12,25 @@ body{
     min-height: 100vh;
     margin: 0;
 }
+.container{
+    width: 40rem;
+    border: 1px solid gray;
+    padding: 1rem;
+    background: white;
+    text-align: center;
+    border-radius: 5px;
+}
+.count{
+    font-size: 3rem;
+    padding: 0 1rem;
+    text-align: center;
+}
+input[type="text"]{
+    border: 1px solid #dedede;
+    border-radius: 2px;
+    display: block;
+    font-size: 16px;
+    padding: 10px;
+    width: 100%;
+    outline: none;
+}
