--- a/other/udemy/js_building_20_project/my_project/14_countries_api/style.css
+++ b/other/udemy/js_building_20_project/my_project/14_countries_api/style.css
@@ -31,7 +31,7 @@ body{
 }
 .country .img-container img{
     max-width: 90%;
-    max-height: 80%;
+    max-height: 80px;
     margin-top: 20px;
 }
 .country .info{
